synchronist/db-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synchronist-db
spec:
  selector:
    matchLabels:
      app: synchronist-db
  replicas: 1
  template:
    metadata:
      labels:
        app: synchronist-db
    spec:
      containers:
        - name: synchronist-db
          image: postgres
          ports:
            - containerPort: 5432
              name: "postgres"
          #volumeMounts:
          #  - mountPath: "/var/lib/postgresql/data"
          #    name: synchronist-postgres-data-storage
