synchronist/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synchronist
  labels:
    app: synchronist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: synchronist
  template:
    metadata:
      labels:
        app: synchronist
    spec:
      containers:
      - name: synchronist
        image: docker.io/siegy22/synchronist@sha256:b039fe71994f208af9c87893457557b0453c6668e387dfe7137ca4012df0c8ed
        #command: ["cd /synchronist && bundle exec rails --binding 0.0.0.0 --port 3000"]
        #args: ["exec rails --binding 0.0.0.0 --port 3000"]
        ports:
          - containerPort: 3000
