synchronist/worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synchronist-worker
  labels:
    app: synchronist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: synchronist
  template:
    metadata:
      labels:
        app: synchronist
    spec:
      containers:
      - name: synchronist
        image: docker.io/siegy22/synchronist@sha256:b039fe71994f208af9c87893457557b0453c6668e387dfe7137ca4012df0c8ed
        command: ["bundle", "exec", "sidekiq"]
