synchronist/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: synchronist-db-service
spec:
  type: NodePort
  selector:
    app: synchronist-db
  ports:
    - name: "postgres"
      protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 30432
