synchronist/service.yml
apiVersion: v1
kind: Service
metadata:
  name: synchronist
spec:
  selector:
    app: synchronist
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
