synchronist/route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: synchronist
spec:
  host: synchronist.apps.openshift.androme.da
  to:
    kind: Service
    name: synchronist
    weight: 100
  port:
    targetPort: 3000
  wildcardPolicy: None
